frontend (data for user)

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -7,7 +7,7 @@
 
 <div class="container" style="padding: 25px;">
   <div class="row">
-    <div class="col-xs-6">
+    <div class="col-md-6 col-xs-12">
       <h3 class="panel-label">วันที่</h3>
       <div class="panel panel-default daybox">
         <div class="panel-body">
@@ -18,37 +18,47 @@
         <h3 class="panel-label">รายได้จากค่าจับคู่</h3>
         <div class="panel panel-default commissionbox">
           <div class="panel-body">
-            <%=childIncome%>
+            <%=childIncome%> บาท
           </div>
         </div>
         <h3 class="panel-label">ช่องคงเหลือในผัง</h3>
         <div class="panel panel-default commissionbox">
           <div class="panel-body">
-            <%=emptySlot%>
+            <%if(!emptySlot){%>
+              <div style="color: red;">ผังเต็มแล้ว!</div>
+            <%}else{%>
+              <%=emptySlot%> คน
+            <%}%>
+            
           </div>
         </div>
 
+
     </div>
-    <h3 class="panel-label">รวมทั้งสิ้น</h3>
-    <div class="panel panel-default commissionbox">
-      <div class="panel-body">
-        <%=childIncome+sponsorIncome%>
-      </div>
-    </div>
-    <div class="col-xs-6">
-      <h3 class="panel-label">รายได้จากค่าแนะนำ</h3>
+    <div class="col-md-6 col-xs-12">
+      <h3 class="panel-label">รวมทั้งสิ้น</h3>
       <div class="panel panel-default commissionbox">
         <div class="panel-body">
-          <%=sponsorIncome%>
+          <%=childIncome+sponsorIncome%> บาท
         </div>
       </div>
-        <h3 class="panel-label">จำนวนคนที่เชิญ</h3>
+      
+        <h3 class="panel-label">รายได้จากค่าแนะนำ</h3>
         <div class="panel panel-default commissionbox">
           <div class="panel-body">
-            <%=day%>
+            <%=sponsorIncome%> บาท
           </div>
         </div>
+          <h3 class="panel-label">จำนวนคนที่เชิญ</h3>
+          <div class="panel panel-default commissionbox">
+            <div class="panel-body">
+              <%=sponsorChild%> คน
+            </div>
+          </div>
+      </div>
+    
     </div>
+
   </div>
 
 </div>
@@ -59,8 +69,8 @@
 
 <div class="container" style="padding: 25px;">
   <div class="row">
-    <div class="col-xs-6">
-        <div class="well well-lg" style="background-color: #B8F170; width: 500px; height: 400px; margin: auto; align-items: center; border-radius: 100px; border-color: black;">
+    <div class="col-lg-6 col-xs-12" style="padding: 50px;">
+        <div class="well smallmlm">
             <a href="user/<%=userName.username%>">
                 <div class="row" style="text-align: center">
                     <div class="col-md-12">
@@ -89,26 +99,28 @@
               </a>
           </div>
       </div>
-    <div class="col-xs-6">
+    <div class="col-lg-6 col-xs-12" style="padding: 50px;">
+      <div class="well smallmlm">
         <a href="user/<%=userName.username%>/sponsor">
-            <div class="well well-lg" style="background-color: #B8F170; width: 500px; height: 400px; margin: auto; align-items: center; border-radius: 100px; border-color: black;">
+          <div class="row" style="text-align: center">
+            <div class="col-md-12">
+                <i class="fa-solid fa-person fa-7x" style="color: red"></i>
+                <h1><%=userName.username%></h1>
+            </div>
+                    
+          <div class="row" style="text-align: center">
+            <%sponsored.slice(-3).forEach((element)=>{%>
+            <div class="col-xs-4">
+                <i class="fa-solid fa-person fa-6x" style="color: darkorange"></i>
+                <p style="font-size: 30px"><%=element.username%></p>
+            </div>
+            <%})%>
+          </div>
+        </div>
+        </a>
 
-                <div class="row" style="text-align: center">
-                    <div class="col-md-12">
-                        <i class="fa-solid fa-person fa-7x" style="color: red"></i>
-                        <h1><%=userName.username%></h1>
-                    </div>
-                  </div>
-                            
-                  <div class="row" style="text-align: center">
-                    <%sponsored.slice(-3).forEach((element)=>{%>
-                    <div class="col-xs-4">
-                        <i class="fa-solid fa-person fa-6x" style="color: darkorange"></i>
-                        <p style="font-size: 30px"><%=element.username%></p>
-                    </div>
-                    <%})%>
-                  </div>
-            </a>
+        </div>
+
         </div>
         </a>
         
