--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,11 @@ footer {
   line-height: 60px; /* Vertically center the text there */
 }
 
+.smallmlm{
+  background-color: white; width: 500px; height: 350px; margin: auto; align-items: center; border-radius: 100px; border-color: black;
+  
+}
+
 .panel-label{
   color: black; text-align: center;
 }
