--- a/views/partials/goods.ejs
+++ b/views/partials/goods.ejs
@@ -1,4 +1,4 @@
-<form action="/" method="POST">
+<form action="/cart" method="POST">
     <div class="col-md-4 col-xs-6">
         <div class="thumbnail">
           <img src="<%=goodsImage%>" alt="" class="img-responsive">
