--- a/views/sponsor.ejs
+++ b/views/sponsor.ejs
@@ -1,40 +1,47 @@
 <%-include("partials/header.ejs")-%>
 
 <div class="container" style="padding: 25px;">
-  <div class="row">
+  <div class="row"style="padding: 25px;">
       <h3 class="panel-label">วันที่</h3>
       <div class="panel panel-default daybox">
         <div class="panel-body">
           <%=day%>
         </div>
       </div>
+    </div>
+  <div class="row">
+    <a href="/user">
+      <div class="panel panel-default daybox" style="background-color: palegoldenrod; color: black;">
+        <div class="panel-body">
+          Back
+        </div>
+      </div>
+    </a>
   </div>
 </div>
+
+<div class="container mlmcontainer">
+  <div class="row" style="text-align: center">
+    <div class="col-md-12">
+      <a href="/user">
+        <i class="fa-solid fa-person fa-7x" style="color: red"></i>
+        <h1><%=userName.username%></h1>
+      </a>
+    </div>
+  </div>
   
-
-
-<div class="row" style="text-align: center">
-  <div class="col-md-12">
-    <a href="./">
-      <i class="fa-solid fa-person fa-7x" style="color: red"></i>
-      <h1><%=userName.username%></h1>
-    </a>
+  <div class="row" style="text-align: center">
+    <%children.forEach((element)=>{%>
+    <div class="col-xs-1" style="width: 12.499999995%">
+      <a href="/user/<%=element._id%>">
+        <i class="fa-solid fa-person fa-6x" style="color: darkorange"></i>
+        <p style="font-size: 30px"><%=element.username%></p>
+      </a>
+    </div>
+    <%})%>
   </div>
 </div>
 
-
-
-
-<div class="row" style="text-align: center">
-  <%children.forEach((element)=>{%>
-  <div class="col-xs-1" style="width: 12.499999995%">
-    <a href="/user/<%=element._id%>">
-      <i class="fa-solid fa-person fa-6x" style="color: darkorange"></i>
-      <p style="font-size: 30px"><%=element.username%></p>
-    </a>
-  </div>
-  <%})%>
-</div>
 
 
 
