--- a/views/register.ejs
+++ b/views/register.ejs
@@ -186,8 +186,18 @@
               placeholder="Bank"
               required
             >
+            <option value="ธนาคารอิสลามแห่งประเทศไทย">ธนาคารอิสลามแห่งประเทศไทย</option>
+            <option value="ธนาคารอาคารสงเคราะห์">ธนาคารอาคารสงเคราะห์</option>
+            <option value="ธนาคารเพื่อการส่งออกและนำเข้าแห่งประเทศไทย">ธนาคารเพื่อการส่งออกและนำเข้าแห่งประเทศไทย</option>
+            <option value="ธนาคารเพื่อการเกษตรและสหกรณ์การเกษตร">ธนาคารเพื่อการเกษตรและสหกรณ์การเกษตร</option>
+            <option value="ธนาคารพัฒนาวิสาหกิจขนาดกลางและขนาดย่อมแห่งประเทศไทย">ธนาคารพัฒนาวิสาหกิจขนาดกลางและขนาดย่อมแห่งประเทศไทย</option>
+            <option value="ธนาคารยูโอบี">ธนาคารยูโอบี</option>
+            <option value="ธนาคารทิสโก้">ธนาคารทิสโก้</option>
+            <option value="ธนาคารซีไอเอ็มบีไทย">ธนาคารซีไอเอ็มบีไทย</option>
+            <option value="ธนาคารทหารไทยธนชาต">ธนาคารทหารไทยธนชาต</option>
               <option value="ธนาคารกรุงเทพ">ธนาคารกรุงเทพ</option>
               <option value="ธนาคารกรุงไทย">ธนาคารกรุงไทย</option>
+              <option value="ธนาคารออมสิน">ธนาคารออมสิน</option>
               <option value="ธนาคารกรุงศรีอยุธยา">ธนาคารกรุงศรีอยุธยา</option>
               <option value="ธนาคารกสิกรไทย">ธนาคารกสิกรไทย</option>
               <option value="ธนาคารทหารไทยธนชาต">ธนาคารทหารไทยธนชาต</option>
@@ -197,14 +207,10 @@
               <option value="ธนาคารยูโอบี">ธนาคารยูโอบี</option>
               <option value="ธนาคารทิสโก้">ธนาคารทิสโก้</option>
               <option value="ธนาคารเกียรตินาคินภัทร">ธนาคารเกียรตินาคินภัทร</option>
-              <option value="ธนาคารแลนด์ แอนด์ เฮ้าส์
-              ">ธนาคารแลนด์ แอนด์ เฮ้าส์
-            </option>
+              <option value="ธนาคารแลนด์ แอนด์ เฮ้าส์">ธนาคารแลนด์ แอนด์ เฮ้าส์</option>
               <option value="ธนาคารไอซีบีซี">ธนาคารไอซีบีซี</option>
-              <option value="ธนาคารไทยเครดิต">ธนาคารไทยเครดิต</option>
-              <option value="ธนาคารเมกะ สากลพาณิชย์
-              ">ธนาคารเมกะ สากลพาณิชย์
-            </option>
+              <option value="ธนาคารไทยเครดิตเพื่อรายย่อย">ธนาคารไทยเครดิตเพื่อรายย่อย</option>
+              <option value="ธนาคารเมกะ สากลพาณิชย์">ธนาคารเมกะ สากลพาณิชย์</option>
               <option value="ธนาคารแห่งประเทศจีน">ธนาคารแห่งประเทศจีน</option>
               <option value="ธนาคารซูมิโตโมมิตซุยทรัสต์">ธนาคารซูมิโตโมมิตซุยทรัสต์</option>
 
