form optimization/fullname seperation/user comfirm

--- a/views/partials/register_form.ejs
+++ b/views/partials/register_form.ejs
@@ -1,15 +1,32 @@
 
-<div class="form-floating">
-  <label for="fullNamefloatingInput">ชื่อ-นามสกุล</label>
-  <input
-    type="text"
-    name="fullName"
-    class="form-control middle"
-    id="fullNamefloatingInput"
-    placeholder="ชื่อ-นามสกุล"
-    maxlength="50"
-  />
-</div>
+    <div class="form-floating">
+      <label for="firstNamefloatingInput">ชื่อ</label>
+      <input
+        type="text"
+        name="firstName"
+        class="form-control middle"
+        id="firstNamefloatingInput"
+        placeholder="First Name"
+        maxlength="50"
+        required
+      />
+      
+    </div>
+
+    <div class="form-floating">
+      <label for="lastNamefloatingInput">นามสกุล</label>
+      <input
+        type="text"
+        name="lastName"
+        class="form-control middle"
+        id="lastNamefloatingInput"
+        placeholder="Last Name"
+        maxlength="50"
+        required
+      />
+      
+    </div>
+
 
 <div class="form-floating">
   <label for="addressfloatingInput">ที่อยู่</label>
