--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,35 +11,44 @@
   </div>
 </div>
 
-<div class="alert alert-warning">This page is unfinish!</div>
 
 <div class="panel panel-default">
   <span id="message"></span>
   <div class="card">
     <div class="card-header">
-      <div class="panel-heading">Users Data</div>
+      <div class="panel-heading">ข้อมูลผู้ใช้</div>
     </div>
     <div class="card-body">
       <div class="table-responsive">
-        <input type="text" class="form-control" id="searchbar" />
+        <input type="text" class="form-control" id="searchbar" placeholder="Search Data..." style="margin-bottom: 20px; background-color: wheat;"/>
         <!-- Table -->
         <table class="table table-striped table-bordered" id="Table">
           <tr>
+            <th>การแก้ไข</th>
             <th>Username</th>
             <th>ชื่อ-นามสกุล</th>
             <th>ที่อยู่</th>
             <th>ธนาคาร</th>
             <th>เงิน</th>
             <th>พ้อย</th>
-            <th>การแก้ไข</th>
+            
           </tr>
           <tbody id="dataTable">
             <%userData.forEach((element)=>{%>
             <tr>
               <td>
+                <button
+                  type="button"
+                  class="btn btn-warning btn-sm edit"
+                  data-id="<%=element.username%>"
+                >
+                  Edit
+                </button>
+              </td>
+              <td>
                 <%=element.username%>
               </td>
-              <td><%=element.fullName%></td>
+              <td><%=element.firstName%> - <%=element.lastName%></td>
               <td>
                 <%=element.address%> / <%=element.subdistrict%>
                 / <%=element.district%> / <%=element.city%> /
@@ -52,15 +61,7 @@
               </td>
               <td><%=element.money%></td>
               <td><%=element.point%></td>
-              <td>
-                <button
-                  type="button"
-                  class="btn btn-warning btn-sm edit"
-                  data-id="<%=element.username%>"
-                >
-                  Edit
-                </button>
-              </td>
+
             </tr>
             <%})%>
           </tbody>
