--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="auto">
   <head>
-    <script src="/docs/5.3/assets/js/color-modes.js"></script>
+
     <link rel="icon" href="/images/logo1.png" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,10 +13,6 @@
     <meta name="generator" content="Hugo 0.111.3" />
     <title>Login</title>
 
-    <link
-      rel="canonical"
-      href="https://getbootstrap.com/docs/5.3/examples/sign-in/"
-    />
 
     <!-- bootstrap sheet -->
     <link
@@ -128,7 +124,7 @@
               type="text"
               name="username"
               class="form-control top"
-              id="floatingInput"
+              id="Username"
               placeholder="Username"
               maxlength="4"
               minlength="4"
@@ -144,18 +140,47 @@
                 type="password"
                 name="password"
                 class="form-control bottom"
-                id="floatingInput"
+                id="Password"
                 placeholder="Password"
                 minlength="4"
                 required
               />
               <label for="floatingInput">Password</label>
             </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">
+        <button class="w-100 btn btn-lg btn-primary" type="submit" value="Submit">
           ล๊อกอิน
         </button>
+        <p></p>
+        <div class="row">
+          <div class="col-12">
+            <div class="g-recaptcha" data-sitekey="6LftBNcmAAAAAF0Pb7ncvfbjkuR-pTyX8ojCRH0M"></div>
+            <input hidden name="userResponse" id="userResponse">
+          </div>
+          
+        </div>
+          
         <p class="mt-5 mb-3 text-body-secondary">ยังไม่มีบัญชีผู้ใช้? <a href="/register">สมัครสมาชิก!</a></p>
       </form>
     </main>
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script>
+    $(()=>{
+      const forms = $("form");
+      // Loop over them and prevent submission
+      forms.on(
+      "submit",
+      (event) => {
+        const test = grecaptcha.getResponse()
+        if(!test){
+          event.preventDefault()
+          confirm("กรุณายืนยันตัวตน.")
+        }
+        $('#userResponse').val(test)
+        
+    })
+  })
+  </script>
+  
 </html>
