--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="auto">
   <head>
-    <link rel="icon" href="/images/icon.png" />
+    <link rel="icon" href="/images/logo1.png" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
