add captcha to register and fix admin modal bug

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -90,7 +90,7 @@
           <button
             type="button"
             class="btn btn-secondary"
-            data-bs-dismiss="modal"
+            data-dismiss="modal"
           >
             ยกเลิก
           </button>
