add reset password feature & page placeholder

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,6 +11,17 @@
   </div>
 </div>
 
+<input hidden id="currentPage" value="0">
+
+<nav aria-label="...">
+  <ul class="pagination pagination-lg">
+    <li class="page-item ">
+      <a class="page-link" href="#" >1</a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+  </ul>
+</nav>
 
 <div class="panel panel-default">
   <span id="message"></span>
@@ -34,36 +45,7 @@
             
           </tr>
           <tbody id="dataTable">
-            <%userData.forEach((element)=>{%>
-            <tr>
-              <td>
-                <button
-                  type="button"
-                  class="btn btn-warning btn-sm edit"
-                  data-id="<%=element.username%>"
-                >
-                  Edit
-                </button>
-              </td>
-              <td>
-                <%=element.username%>
-              </td>
-              <td><%=element.firstName%> - <%=element.lastName%></td>
-              <td>
-                <%=element.address%> / <%=element.subdistrict%>
-                / <%=element.district%> / <%=element.city%> /
-                <%=element.postCode%>
-              </td>
-              <td>
-                <%=element.bank%> / <%=element.bookBank%> /
-                <%=element.bookBankNumber%> /
-                <%=element.bookBankBranch%>
-              </td>
-              <td><%=element.money%></td>
-              <td><%=element.point%></td>
-
-            </tr>
-            <%})%>
+            
           </tbody>
         </table>
       </div>
